--- a/index.html
+++ b/index.html
@@ -1,129 +1,200 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2822
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
-
-\f0\fs24 \cf0 <!DOCTYPE html>\
-<html lang="en">\
-<head>\
-  <meta charset="UTF-8">\
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">\
-  <title>Joel Sam Jose | Cybersecurity Portfolio</title>\
-  <style>\
-    body \{\
-      margin: 0;\
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;\
-      background-color: #121212;\
-      color: #f0f0f0;\
-    \}\
-    header \{\
-      background-color: #1f1f1f;\
-      padding: 2rem;\
-      text-align: center;\
-    \}\
-    header h1 \{\
-      margin: 0;\
-      font-size: 2.5rem;\
-    \}\
-    header p \{\
-      margin-top: 0.5rem;\
-      font-size: 1.2rem;\
-      color: #ccc;\
-    \}\
-    nav \{\
-      background-color: #272727;\
-      text-align: center;\
-      padding: 1rem 0;\
-    \}\
-    nav a \{\
-      color: #f0f0f0;\
-      margin: 0 15px;\
-      text-decoration: none;\
-      font-weight: bold;\
-    \}\
-    section \{\
-      padding: 3rem;\
-    \}\
-    .project \{\
-      margin-bottom: 2rem;\
-    \}\
-    .project h3 \{\
-      color: #ffcc00;\
-    \}\
-    footer \{\
-      background-color: #1f1f1f;\
-      text-align: center;\
-      padding: 1rem;\
-      color: #aaa;\
-    \}\
-    a.button \{\
-      display: inline-block;\
-      margin-top: 1rem;\
-      padding: 0.5rem 1rem;\
-      background-color: #ffcc00;\
-      color: #000;\
-      text-decoration: none;\
-      border-radius: 5px;\
-    \}\
-  </style>\
-</head>\
-<body>\
-  <header>\
-    <h1>Joel Sam Jose</h1>\
-    <p>Cybersecurity Analyst | Project Manager | Digital Creator</p>\
-  </header>\
-  <nav>\
-    <a href="#about">About</a>\
-    <a href="#projects">Projects</a>\
-    <a href="#resume">Resume</a>\
-    <a href="#contact">Contact</a>\
-  </nav>\
-\
-  <section id="about">\
-    <h2>About Me</h2>\
-    <p>I\'92m a senior pursuing a Bachelor of Science in Information Technology with a concentration in Cybersecurity, graduating May 2025. Passionate about protecting systems and empowering communities through ethical, innovative solutions. I also bring leadership and creativity from my active involvement in youth ministry, media, and UI design.</p>\
-  </section>\
-\
-  <section id="projects">\
-    <h2>Featured Projects</h2>\
-\
-    <div class="project">\
-      <h3>Intrusion Detection System Prototype</h3>\
-      <p>Developed a prototype using Python, Wireshark, and Snort to detect and analyze suspicious network activity. Demonstrated real-time log analysis and threat identification.</p>\
-      <a href="#" class="button">View GitHub</a>\
-    </div>\
-\
-    <div class="project">\
-      <h3>SAP ERP Implementation</h3>\
-      <p>Led project management for a simulated SAP ERP rollout. Created a project plan with Gantt charts, stakeholder mapping, and cost projections.</p>\
-      <a href="#" class="button">View Gantt Chart</a>\
-    </div>\
-\
-    <div class="project">\
-      <h3>Church App UI Design</h3>\
-      <p>Designed a mobile app interface for a youth ministry with sections for prayer, news, and community engagement. Used dark-themed UI for modern appeal and readability.</p>\
-      <a href="#" class="button">View Design</a>\
-    </div>\
-  </section>\
-\
-  <section id="resume">\
-    <h2>Resume & Certifications</h2>\
-    <p>Download my resume and explore my certifications including AWS Cloud Foundations and GRC Foundations.</p>\
-    <a href="#" class="button">Download Resume (PDF)</a>\
-  </section>\
-\
-  <section id="contact">\
-    <h2>Contact</h2>\
-    <p>Email: joelsamjose@example.com</p>\
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/joel-sam-jose" target="_blank">joel-sam-jose</a></p>\
-    <p>GitHub: <a href="https://github.com/joelsamjose" target="_blank">joelsamjose</a></p>\
-  </section>\
-\
-  <footer>\
-    <p>&copy; 2025 Joel Sam Jose. All rights reserved.</p>\
-  </footer>\
-</body>\
-</html>\
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Joel Sam Jose | Cybersecurity Portfolio</title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --primary-color: #007ACC;
+      --secondary-color: #2c3e50;
+      --background-color: #f5f7fa;
+      --text-color: #333;
+      --accent-color: #ffcc00;
+      --max-width: 1200px;
+    }
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      font-family: 'Roboto', sans-serif;
+      background-color: var(--background-color);
+      color: var(--text-color);
+      line-height: 1.6;
+    }
+    header {
+      background-color: var(--primary-color);
+      color: #fff;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+      font-weight: 700;
+    }
+    header p {
+      margin: 0.5rem 0 0;
+      font-size: 1.1rem;
+      font-weight: 500;
+    }
+    nav {
+      background-color: var(--secondary-color);
+      padding: 1rem;
+    }
+    nav ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+    nav li {
+      margin: 0 1rem;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      position: relative;
+    }
+    nav a::after {
+      content: '';
+      display: block;
+      width: 0;
+      height: 2px;
+      background: var(--accent-color);
+      transition: width .3s;
+      position: absolute;
+      bottom: -4px;
+      left: 0;
+    }
+    nav a:hover::after {
+      width: 100%;
+    }
+    .container {
+      max-width: var(--max-width);
+      margin: 0 auto;
+      padding: 2rem 1rem;
+    }
+    h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      text-align: center;
+      color: var(--secondary-color);
+    }
+    .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2rem;
+    }
+    .project-card {
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      padding: 1.5rem;
+      transition: transform .3s, box-shadow .3s;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+    .project-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+    }
+    .project-card h3 {
+      margin-top: 0;
+      color: var(--primary-color);
+      font-weight: 500;
+    }
+    .project-card p {
+      flex-grow: 1;
+    }
+    .project-card a.button {
+      align-self: flex-start;
+      margin-top: 1rem;
+      padding: 0.5rem 1rem;
+      background-color: var(--accent-color);
+      color: #000;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: 500;
+      transition: background .3s;
+    }
+    .project-card a.button:hover {
+      background-color: #e6b800;
+    }
+    footer {
+      background-color: var(--secondary-color);
+      color: #fff;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
+    @media(max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
+      h2 {
+        font-size: 1.5rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Joel Sam Jose</h1>
+    <p>Cybersecurity Analyst | Project Manager | Digital Creator</p>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#resume">Resume</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+  <section id="about" class="container">
+    <h2>About Me</h2>
+    <p>I'm a senior pursuing a Bachelor of Science in Information Technology with a concentration in Cybersecurity, graduating May 2025. Passionate about protecting systems and empowering communities through ethical, innovative solutions. I also bring leadership and creativity from my active involvement in youth ministry, media, and UI design.</p>
+  </section>
+  <section id="projects" class="container">
+    <h2>Featured Projects</h2>
+    <div class="projects">
+      <div class="project-card">
+        <h3>Intrusion Detection System Prototype</h3>
+        <p>Developed a prototype using Python, Wireshark, and Snort to detect and analyze suspicious network activity. Demonstrated real-time log analysis and threat identification.</p>
+        <a href="#" class="button">View GitHub</a>
+      </div>
+      <div class="project-card">
+        <h3>SAP ERP Implementation</h3>
+        <p>Led project management for a simulated SAP ERP rollout. Created a project plan with Gantt charts, stakeholder mapping, and cost projections.</p>
+        <a href="#" class="button">View Gantt Chart</a>
+      </div>
+      <div class="project-card">
+        <h3>Church App UI Design</h3>
+        <p>Designed a mobile app interface for a youth ministry with sections for prayer, news, and community engagement. Used dark-themed UI for modern appeal and readability.</p>
+        <a href="#" class="button">View Design</a>
+      </div>
+    </div>
+  </section>
+  <section id="resume" class="container">
+    <h2>Resume & Certifications</h2>
+    <p>Download my resume and explore my certifications including AWS Cloud Foundations and GRC Foundations.</p>
+    <a href="#" class="button">Download Resume (PDF)</a>
+  </section>
+  <section id="contact" class="container">
+    <h2>Contact</h2>
+    <p>Email: joelsamjose@example.com</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/joel-sam-jose" target="_blank">joel-sam-jose</a></p>
+    <p>GitHub: <a href="https://github.com/joelsamjose" target="_blank">joelsamjose</a></p>
+  </section>
+  <footer>
+    <p>&copy; 2025 Joel Sam Jose. All rights reserved.</p>
+  </footer>
+</body>
+</html>
